--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!-- Write your HTML in this file -->
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head> </head>
-<title> Hello, World!!</title>
-<body> </body>
+<head>
+<title> HTML Page </title>
+</head>
+<body></body>
 </html>
